# student_promobot

./: .gitignore  README.md  hello  hello.cpp
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: publisher_hello.cpp  subscriber_member_function.cpp
install/: local_setup.sh  setup.sh
install/cpp_pubsub/share/cpp_pubsub/: package.sh
log/: latest_build
two_nodes/: CMakeLists.txt  package.xml
two_nodes/hpp/: one_node.hpp  two_node.hpp
two_nodes/launch/: two_nodes_launch.py
two_nodes/parameters/: first_node.yaml  second_node.yaml
two_nodes/script/: start.py
two_nodes/src/: one_node.cpp  two_node.cpp
two_nodes_qt/: CMakeLists.txt  main.cpp  one_node.cpp  one_node.h  one_node.ui
